      ported (Closes: #391298). Thanks to Aurelien Jarno <aurel32@debian.org>
      for the patch.
  * debian/patches/10_initscripts-scriptname.patch:
    + Set SCRIPTNAME variable in init scripts (Closes: #386957)
  * debian/avahi-daemon.postinst:
    + Add the netdev group unless it's already there (Closes: #385495, #389243)

 -- Sebastian Dröge <slomo@ubuntu.com>  Tue, 17 Oct 2006 18:45:52 +0200

avahi (0.6.14-1) unstable; urgency=low

  [ Sebastian Dröge ]
  * New upstream release
  * debian/patches/02_static-hosts.patch:
    + Dropped, merged upstream
  * debian/patches/02_local-service.patch:
    + Fix detection whether a service is from the local machine. Patch from
      upstream SVN (r1329)
  * debian/control,
    debian/avahi-autoipd.postinst:
    debian/avahi-autoipd.postrm:
    debian/avahi-autoipd.prerm,
    debian/avahi-autoipd.install:
    + Add new avahi-autoipd package

  [ Sjoerd Simons ]
  * Let libavahi-compat-libdnssd1 recommend libnss-mdns instead of depending
    on it. (Closes: #390614)
  * Install avahi-autoipd's exit hook as zzz_avahi-autoipd to ensure it runs
    last.

 -- Sjoerd Simons <sjoerd@debian.org>  Mon,  2 Oct 2006 21:03:20 +0200

avahi (0.6.13-3) unstable; urgency=low

  [ Sebastian Dröge ]
  * debian/control,
    debian/pyversions:
    + Allow the modules to be used with all supported python versions greater
      or equal to 2.4
  * debian/pycompat:
    + Dropped, not required by policy anymore

  [ Sjoerd Simons ]
  * Make libavahi-compat-libdnssd1 depend on libnss-mdns as it's needed for
    proper operation.
  * debian/clean-la.mk: Copy clean-la.mk from the gnome-pkg-tools packages.
    Removes dependency_libs from the .la file.

 -- Sjoerd Simons <sjoerd@debian.org>  Sun,  3 Sep 2006 19:27:13 +0200


avahi (0.6.13-2) unstable; urgency=low

  * debian/patches/02_static-hosts.patch:
    + Fix assertion failure when using static hosts (Closes: #385297)
      Patch from upstream SVN (r1285)
