@@ -1,0 +1,28 @@
+#!/bin/sh -e
+# Description:      Remove routes to allow communication between machines which
+#                   only have an IPv4LL address assigned and those which only
+#                   have a routable address assigned. These were added by
+#                   /etc/network/if-up.d/avahi-autoipd.
+#
+#                   See http://developer.apple.com/qa/qa2004/qa1357.html for
+#                   more information.
+
+
+[ "$IFACE" != "lo" ] || exit 0
+[ "$ADDRFAM" = "inet" ] || exit 0
+[ "$METHOD" = "static" -o "$METHOD" = "dhcp" ] || exit 0
+
+if [ -x /bin/ip ]; then
+	# route already present?
+	[ "`ip route show dev $IFACE | grep ^169.254.0.0/16`" ] || exit 0
+
+	/bin/ip route del 169.254.0.0/16 dev $IFACE metric 1000 scope link || true
+	/bin/ip route del default dev $IFACE metric 1000 scope link || true
+elif [ -x /sbin/route ]; then
+	# route already present?
+	[ "`/sbin/route -n | grep ^169.254.0.0 | grep $IFACE`" ] || exit 0
+
+	/sbin/route del -net 169.254.0.0 netmask 255.255.0.0 dev $IFACE metric 99 || true
+	/sbin/route del default dev $IFACE metric 99 || true
+fi
+
