@@ -41,6 +41,12 @@ binary-install/python-avahi::
 binary-fixup/avahi-daemon binary-fixup/avahi-dnsconfd::
 	chmod +x debian/$(cdbs_curpkg)/etc/dbus-1/event.d/*
 
+install/avahi-autoipd::
+	install -D -o root -g root -m 755 debian/avahi-autoipd.ifup \
+		debian/$(cdbs_curpkg)/etc/network/if-up.d/avahi-autoipd
+	install -D -o root -g root -m 755 debian/avahi-autoipd.ifdown \
+		debian/$(cdbs_curpkg)/etc/network/if-down.d/avahi-autoipd
+
 common-install-impl::
 	mv $(DEB_DESTDIR)/etc/dhcp3/dhclient-exit-hooks.d/avahi-autoipd \
 		$(DEB_DESTDIR)/etc/dhcp3/dhclient-exit-hooks.d/zzz_avahi-autoipd
