@@ -16,6 +16,13 @@ avahi (0.6.14-2) unstable; urgency=low
     + Set SCRIPTNAME variable in init scripts (Closes: #386957)
   * debian/avahi-daemon.postinst:
     + Add the netdev group unless it's already there (Closes: #385495, #389243)
+  * debian/avahi-autoipd.ifup,
+    debian/avahi-autoipd.ifdown,
+    debian/rules:
+    + Add ifupdown scripts to set routes to allow communication between
+      machines which only have an IPv4LL address assigned and those which
+      only have a routable address assigned.
+      See http://developer.apple.com/qa/qa2004/qa1357.html for more information.
 
  -- Sebastian Dröge <slomo@ubuntu.com>  Tue, 17 Oct 2006 18:45:52 +0200
 
